src/FinancialForce Accounting/objects/CustomFormLayoutRelatedList__c.object
<CustomObject>
    <description>Stores the details of the custom form layout for related lists</description>
    <fields>
        <fullName>CustomFormLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomFormLayout</label>
        <referenceTo>CustomFormLayout__c</referenceTo>
        <relationshipLabel>CustomForm Layout Sections</relationshipLabel>
        <relationshipName>CustomFormLayoutRelatedLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderBy__c</fullName>
        <label>Sort By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDirection__c</fullName>
        <label>Sort Direction</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipName__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CustomForm Layout Related List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFLR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomForm Layout Related Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>